[package]
name = "egui-arbor"
version = "0.1.1"
edition = "2024"
authors = ["kyjohnso"]
description = "A tree outliner widget for egui - hierarchical data visualization and editing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyjohnso/egui-arbor"
keywords = ["egui", "tree", "outliner", "gui", "widget"]
categories = ["gui"]

[features]
serde = ["dep:serde"]

[dependencies]
egui = "0.31"
serde = { version = "1.0", optional = true }

[dev-dependencies]
eframe = "0.31"
bevy = "0.16.1"
bevy_egui = "0.34"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "bevy_3d_outliner"
path = "examples/bevy_3d_outliner.rs"
